--- a/src/Components/TodoInput/TodoInput.module.scss
+++ b/src/Components/TodoInput/TodoInput.module.scss
@@ -1,3 +1,5 @@
+@import "../../sass/mixings.scss";
+
 .container {
     display: flex;
     align-items: center;
@@ -15,6 +17,7 @@
     flex: 18;
     outline: none;
     padding: 2px 0;
+	padding-right: 10px;
     border: none;
     border-bottom: 2px solid white ;
     background: transparent;
